--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/@primer/css@^20.2.4/dist/primer.css" rel="stylesheet" />
-    <title>LBP Union LDL</title>
+    <title>Lighthouse Wire @ LBPU</title>
 </head>
 <body>
 
     <div class="Header">
         <div class="Header-item Header-item--full">
           <a href="#" class="Header-link f4 d-flex flex-items-center">
-            <span>Lighthouse Development Log</span>
+            <span>Lighthouse Wire</span>
           </a>
         </div>
         <div class="Header-item mr-0">
