--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
     <div style="padding: 20px;">
         <div class="Layout Layout--divided">
-            <div class="Layout-main anim-fade-in">
+            <div class="Layout-main">
 
             <div class="TimelineItem">
             <div class="TimelineItem-badge color-bg-success-emphasis color-fg-on-emphasis">
