LDL / Style Change @ 02/10/2023

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
           </a>
         </div>
         <div class="Header-item mr-0">
-            <span class="Label mr-1 Label--warning" style="background-color:white;">
+            <span class="Label mr-1 Label--warning" style="background-color:rgb(117, 59, 11);">
                 Development v18
             </span>
         </div>
