LDL / UserTag: m88youngling

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
                                   </div>
                                   <div class="Box-row">
                                     <p class="mb-0 color-fg-muted">
-                                      A special set of announcements from LBP Union Lead Protector m88youngling.
+                                      A special set of announcements from LBP Union Lead Protector<br><img class="avatar avatar-small" alt="m88youngling" src="https://github.com/m88youngling.png?v=3&s=40" width="20" height="20" /> <a href="https://github.com/m88youngling">@m88youngling</a>.
                                       <div class="mt-3">
                                         <span class="Label mr-1 Label--accent">project-lighthouse</span> <span class="Label mr-1">February 19th, 2023</span> <span class="Label mr-1">8:00 PM EST</span>
                                       </div>
