LDL / Style Change @ 02/10/2023

--- a/public/index.html
+++ b/public/index.html
@@ -109,8 +109,15 @@
                 </div>
 
                 <!-- <div class="blankslate">
-                    <h3 class="blankslate-heading">Nothing here... yet.</h3>
-                    <p>We've got nothing to share as of right now. Check back soon!</p>
+                  <img src="https://ghicons.github.com/assets/images/blue/png/Newsfeed.png" alt="" class="blankslate-image" />
+                  <h3 class="blankslate-heading">It's quiet around here. A little too quiet...</h3>
+                  <p>We've got nothing of interest to share at the moment. Check back later!</p>
+                  <div class="blankslate-action">
+                    <button class="btn btn-primary" onclick="window.location.href = 'https://discord.gg/lbpunion'" type="button">Join us on Discord</button>
+                  </div>
+                  <div class="blankslate-action">
+                    <button class="btn-link" onclick="window.location.href = 'https://github.com/LBPUnion/ProjectLighthouse/blob/main/README.md'" type="button">Learn more about Project Lighthouse</button>
+                  </div>
                 </div> -->
 
             </div>
